--- a/css/homepage.css
+++ b/css/homepage.css
@@ -52,7 +52,7 @@ body
 #left-col {
     float: left;
     width: 70vw;
-    background-color: #23212F;
+    background-color: #2f2c40;
     padding-bottom: 500em;
     margin-bottom: -500em;
 
@@ -67,7 +67,7 @@ body
     width: 30vw;
     
     margin-right: -1px; /* For IE */
-    background-color: #23212F;
+    background-color: #2f2c40;
     padding-bottom: 500em;
     margin-bottom: -500em;
   }
