--- a/css/singin.css
+++ b/css/singin.css
@@ -10,19 +10,72 @@ body{
     display:flex;
     justify-content:center;
     width:60vw;
-    height:550px;
+    height:auto;
     
     background-color:rgba(255, 255, 255, 0.418); 
     margin: 0 auto;
     margin-top: 10vw;
   }
 
+  .flex button{
+      height: 5vh;width: 10vw ;
+  }
 #forform{
     
     width:50vh;
-  
+    height: auto;
 }
 
 *{
-    color:#413d57 ;
+    color:#2f2c40 ;
 }
+@media (max-width: .98px)and(min-width: 780.98px) 
+ { 
+    .flex{
+        width:100vw;
+        margin-left: 0;
+        margin-right: 0;
+        overflow-x: hidden;
+    }
+   
+    .flex button{
+        width: 60vw ;
+        
+    }
+
+}
+@media (min-width: 500px)and (max-width: 800.98px)  { 
+    .flex{
+        width:100vw;
+        margin-left: 0;
+        overflow-x: hidden;
+    }
+    .flex button{
+
+        width: 45vw ;
+        height: auto;
+        
+    }
+
+   
+}
+@media (max-width: 576px) { 
+    .flex{
+        width:100vw;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .flex button{
+     
+       
+        width: 60vw ;
+        height: auto;
+    }
+}
+
+
+
+
+
+
